--- a/preprocess_CLOC.ipynb
+++ b/preprocess_CLOC.ipynb
@@ -1,10 +1,11 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook cleans up the metadata for the CLOC dataset. \n",
+    "This notebook cleans up the metadata for the CLOC dataset. Note: you must first donwload the CLOC dataset before using this notebook. \n",
     "\n",
     "CLOC dataset provides a huge list of image URLs hosted in Flickr server. However, some of these URLs may no longer be valid. This notebook removes these invalid URLs in the metadata of the training and test sets."
    ]
